scrollbar glitch fixed

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ li {
 }
 
 body{
-    background-color: red;
+    background-color: white;
 }
 .h-fit {
     height: fit-content;
@@ -33,7 +33,6 @@ body{
     border: 1px solid white;
 }
 html::-webkit-scrollbar{
-    background-color: transparent;
     width: 5px;
 }
 html::-webkit-scrollbar-thumb{
